framework/Auth/tests/passwd.out
Fatal error: Class 'Horde' not found in /usr/share/php/Horde/Auth/passwd.php on line 93